Fix input overflow with flexbox and ellipsis

--- a/public/css/calc.css
+++ b/public/css/calc.css
@@ -195,12 +195,27 @@ html, body{
     font-family: 'pixelized', monospace, monospace;
     font-size: 0.61em;
     letter-spacing: -0.1em;
-    padding: 0.01em 0.3em 0.01em 0.3em;
+    padding: 0em 0.3em 0em 0.3em;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
-#inputCover > span {
+#inputCover span {
+    height: 90%;
+}
+#inputCover span:nth-child(1) {
     border-right: 2px solid black;
     margin-right: -2px;
-    animation: borderBlink 1s step-end infinite;  
+    animation: borderBlink 1s step-end infinite;
+    flex-shrink: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+}
+#inputCover span:nth-child(2) {
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 #calc-screen-shadow-top {
     position: absolute;
